--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -14,10 +14,10 @@ Template: Welcome
 
 .copyright-view p:first-of-type {
     color: #000;
-    background-color: #F7F6F6;
+    background-color: #e0e0e0;
 }
 
 .copyright-view p:last-of-type {
     color: #359FD5;
-    background-color: #F7F6F6;
+    background-color: #e0e0e0;
 }
