--- a/app/partials/categoryView.html
+++ b/app/partials/categoryView.html
@@ -1,20 +1,20 @@
 <section class="container category-view">
     <nav class="nav nav-cat-search">
         <hr />
-            <ul>
-                <!--- TODO would like to see the toggle in scope and stay open if opened while navigation through categories and products until user decides to close aside nav --->
-                <li class="nav-header hidden-sm hidden-xs" ng-click="showMega = ! showMega" href="#">
-                    <span ng-show="!showMega"><i class="fa fa-plus" data-title="Open all Categories" data-placement="right" bs-tooltip></i></span>
-                    <span ng-show="showMega"><i class="fa fa-minus-circle" data-title="Close all Categories" data-placement="right" bs-tooltip></i></span>
-                </li>
-                <li class="text-nav">
-                    <span class="text-primary" ng-bind-html="currentCategory.Name || 'All Categories'"></span>
-                    <span class="text-primary" ng-show="!currentCategory">All Categories</span>
-                </li>
-                <li class="pull-right">
-                    <a href="#/search"><span><i class="fa fa-search" data-title="Search Products" data-placement="left" bs-tooltip></i></span></a>
-                </li>
-            </ul>
+        <ul>
+            <!--- TODO would like to see the toggle in scope and stay open if opened while navigation through categories and products until user decides to close aside nav --->
+            <li class="nav-header hidden-sm hidden-xs" ng-click="showMega = ! showMega" href="#">
+                <span ng-show="!showMega"><i class="fa fa-plus" data-title="Open all Categories" data-placement="right" bs-tooltip></i></span>
+                <span ng-show="showMega"><i class="fa fa-minus-circle" data-title="Close all Categories" data-placement="right" bs-tooltip></i></span>
+            </li>
+            <li class="text-nav">
+                <span class="text-primary" ng-bind-html="currentCategory.Name || 'All Categories'"></span>
+                <span class="text-primary" ng-show="!currentCategory">All Categories</span>
+            </li>
+            <li class="pull-right">
+                <a href="#/search"><span><i class="fa fa-search" data-title="Search Products" data-placement="left" bs-tooltip></i></span></a>
+            </li>
+        </ul>
         <hr />
     </nav>
     <aside class="col-sm-3 hidden-sm hidden-xs" ng-if="showMega" ng-class="{ 'category-view-aside': showMega }">
@@ -31,7 +31,7 @@
             <h3 class="text-primary" ng-show="currentCategory.SubCategories.length && currentCategory.InteropID">Categories</h3>
             <nav class="nav 451_lbl_subcatlist">
                 <ul>
-                    <li class="nav-header well col-lg-3 col-md-4 col-sm-6 col-xs-12 productGrid" ng-class="{ 'category-view-aside': showMega }" ng-repeat="c in currentCategory.SubCategories">
+                    <li class="nav-header col-lg-3 col-md-4 col-sm-6 col-xs-12 productGrid" ng-class="{ 'category-view-aside': showMega }" ng-repeat="c in currentCategory.SubCategories">
                         <a class="cat-link" ng-href="#/catalog/{{c.InteropID}}">
                             <figure ng-show="c.Image.URL" class="cat-image">
                                 <img ng-src="{{c.Image.URL}}"/>
@@ -55,7 +55,7 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li style="min-height:0;" class="nav-header well productList" ng-class="{ 'category-view-aside': showMega }" ng-repeat="product in products">
+                    <li style="min-height:0;" class="nav-header productList" ng-class="{ 'category-view-aside': showMega }" ng-repeat="product in products">
                         <shortproductview p="product" user="user" />
                     </li>
                 </ul>
