Add category name

--- a/app/partials/categoryView.html
+++ b/app/partials/categoryView.html
@@ -39,6 +39,7 @@
                             <div class="empty" ng-show="!c.Image.URL">
                                 <span class="fa empty"><i class="fa fa-camera"></i></span>
                             </div>
+                            <h5><span ng-bind-html="c.Name"></span></h5>
                             <figcaption class="category-description" ng-bind-html="trusted(c.Description)"></figcaption>
                         </a>
                     </li>
