--- a/app/partials/SpecForms/OBC.html
+++ b/app/partials/SpecForms/OBC.html
@@ -19,7 +19,7 @@
                 <div class="view-form-icon">
                     <div class="input-group">
                         <label>Name</label>
-                        <input class="form-control" placeholder="{{Variant.Specs.Name.V01Name}}" size="{{Variant.Specs.V01Name.Width * .13}}" ng-maxlength="{{Variant.Specs.V01Name.MaxLength}}" ui-mask="{{Variant.Specs.V01Name.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.Name.Required}}" ng-model="Variant.Specs.V01Name.Value"></input>
+                        <input class="form-control" placeholder="Name" size="{{Variant.Specs.V01Name.Width * .13}}" ng-maxlength="{{Variant.Specs.V01Name.MaxLength}}" ui-mask="{{Variant.Specs.V01Name.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.Name.Required}}" ng-model="Variant.Specs.V01Name.Value"></input>
                     </div>
                     <div class="input-group">
                         <label>Title</label>
@@ -27,19 +27,19 @@
                     </div>
                     <div class="input-group">
                         <label>Address</label>
-                        <input class="form-control" placeholder="{{Variant.Specs.V04Address1.Name}}" size="{{Variant.Specs.V04Address1.Width * .13}}" ng-maxlength="{{Variant.Specs.V04Address1.MaxLength}}" ui-mask="{{Variant.Specs.V04Address1.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V04Address1.Required}}" ng-model="Variant.Specs.V04Address1.Value"></input>
+                        <input class="form-control" placeholder="Address" size="{{Variant.Specs.V04Address1.Width * .13}}" ng-maxlength="{{Variant.Specs.V04Address1.MaxLength}}" ui-mask="{{Variant.Specs.V04Address1.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V04Address1.Required}}" ng-model="Variant.Specs.V04Address1.Value"></input>
                     </div>
                     <div class="input-group">
                         <label>Address Line Two</label>
-                        <input class="form-control" placeholder="{{Variant.Specs.V05Address2.Name}}" size="{{Variant.Specs.V05Address2.Width * .13}}" ng-maxlength="{{Variant.Specs.V05Address2.MaxLength}}" ui-mask="{{Variant.Specs.V05Address2.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V05Address2.Required}}" ng-model="Variant.Specs.V05Address2.Value"></input>
+                        <input class="form-control" placeholder="Address Line Two" size="{{Variant.Specs.V05Address2.Width * .13}}" ng-maxlength="{{Variant.Specs.V05Address2.MaxLength}}" ui-mask="{{Variant.Specs.V05Address2.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V05Address2.Required}}" ng-model="Variant.Specs.V05Address2.Value"></input>
                     </div>
                     <div class="input-group">
                         <label>City, State Zip</label>
-                        <input class="form-control" placeholder="{{Variant.Specs.V07City.Name}}" size="{{Variant.Specs.V07City.Width * .13}}" ng-maxlength="{{Variant.Specs.V07City.MaxLength}}" ui-mask="{{Variant.Specs.V07City.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V07City.Required}}" ng-model="Variant.Specs.V07City.Value"></input>&nbsp;<input class="form-control" placeholder="{{Variant.Specs.V08State.Name}}" size="{{Variant.Specs.V08State.Width * .13}}" ng-maxlength="{{Variant.Specs.V08State.MaxLength}}" ui-mask="{{Variant.Specs.V08State.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V08State.Required}}" ng-model="Variant.Specs.V08State.Value"></input>&nbsp;<input class="form-control" placeholder="{{Variant.Specs.V09Zip.Name}}" size="{{Variant.Specs.V09Zip.Width * .13}}" ng-maxlength="{{Variant.Specs.V09Zip.MaxLength}}" ui-mask="{{Variant.Specs.V09Zip.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V09Zip.Required}}" ng-model="Variant.Specs.V09Zip.Value"></input>
+                        <input class="form-control" placeholder="City" size="{{Variant.Specs.V07City.Width * .13}}" ng-maxlength="{{Variant.Specs.V07City.MaxLength}}" ui-mask="{{Variant.Specs.V07City.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V07City.Required}}" ng-model="Variant.Specs.V07City.Value"></input>&nbsp;<input class="form-control" placeholder="State" size="{{Variant.Specs.V08State.Width * .13}}" ng-maxlength="{{Variant.Specs.V08State.MaxLength}}" ui-mask="{{Variant.Specs.V08State.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V08State.Required}}" ng-model="Variant.Specs.V08State.Value"></input>&nbsp;<input class="form-control" placeholder="Zip Code" size="{{Variant.Specs.V09Zip.Width * .13}}" ng-maxlength="{{Variant.Specs.V09Zip.MaxLength}}" ui-mask="{{Variant.Specs.V09Zip.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V09Zip.Required}}" ng-model="Variant.Specs.V09Zip.Value"></input>
                     </div>
                     <div class="input-group">
                         <label>Email</label>
-                        <input class="form-control" placeholder="{{Variant.Specs.V13Email.Name}}" size="{{Variant.Specs.V13Email.Width * .13}}" ng-maxlength="{{Variant.Specs.V13Email.MaxLength}}" ui-mask="{{Variant.Specs.V13Email.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V13Email.Required}}" ng-model="Variant.Specs.V13Email.Value"></input>
+                        <input class="form-control" placeholder="Email Address" size="{{Variant.Specs.V13Email.Width * .13}}" ng-maxlength="{{Variant.Specs.V13Email.MaxLength}}" ui-mask="{{Variant.Specs.V13Email.MaskedInput}}" type="text" autocomplete="off" ng-required="{{Variant.Specs.V13Email.Required}}" ng-model="Variant.Specs.V13Email.Value"></input>
                     </div>
                 </div>
                 <div class="panel-footer">
